--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Page title</title>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-		<link rel="stylesheet" type="text/css" href="/css/styles.css">
+		<link rel="stylesheet" type="text/css" href="/css/styles">
 	</head>
 	<body>
-		<script type="text/javascript" src="/js/base.js"></script>
+		<script type="text/javascript" src="/js/base"></script>
 	</body>
 </html>
