--- a/www/_____/index.html
+++ b/www/_____/index.html
@@ -3,44 +3,172 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <title>ПЕРВАЯ КЛИНИКА НАУЧНООБОСНОВАННОЙ ПСИХОТЕРАПИИ В ПЕРМИ </title>
-<link REL="stylesheet" TYPE="text/css" HREF="css/styles.css">
+<link rel="stylesheet" TYPE="text/css" HREF="css/styles.css">
+<link rel="stylesheet" TYPE="text/css" HREF="css/font-awesome.min.css">
 <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script> 
 </head>
 <body>
 
-	<!-- РЁР°РїРєР° -->
+	<!-- Шапка -->
 	<header class="block header">
 		<div class="block-inner">
-			<div class="logo"></div>
-			<nav>
-				<a href="#menu" class="active"></a>
-				<a href="#catering"></a>
-				<a href="#location"></a>
-				<a href="#about"></a>
-				<a href="#delivering"></a>
-			</nav>
-			<div class="phone">
-				+7 921 412-30-55
-			</div>
-			<div class="social">
-				<a href="#"></a>
-				<a href="#"></a>
-				<a href="#"></a>
-			</div>
-			<div class="button show-form-dialog">
-				
+			<a href="/" class="logo"></a>
+			<span class="header-text">
+				ПЕРВАЯ КЛИНИКА НАУЧНООБОСНОВАННОЙ ПСИХОТЕРАПИИ В ПЕРМИ
+			</span>
+			<a href="#" class="social fa fa-facebook"></a>
+			<a href="#" class="social fa fa-vk"></a>
+			<div class="buttons">
+				<span class="fa fa-search"></span>
+				<div class="phone">
+					8 800 777 44 66
+				</div>
+				<div class="button order-button">
+					ЗАПИСЬ НА ПРИЕМ 24/7
+				</div>
 			</div>
 		</div>
 	</header>
 
-	<!--  -->
-	<div class="block banner">
+	<!-- Главное меню -->
+	<div class="nav-header block">
 		<div class="block-inner">
-	
+			<div class="nav-block">
+				<a href="/" class="logo"></a>
+				<a href="#" class="social fa fa-facebook"></a>
+				<a href="#" class="social fa fa-vk"></a>
+				<nav>
+					<div class="with-submenu">
+						<a href="about.html">О центре</a>
+						<span>
+							<a href="about.html">Обучение в центре</a>
+							<a href="about.html">Наши партнеры</a>
+							<a href="about.html">Документы и лицензии</a>
+							<a href="about.html">Наши специалисты</a>
+							<a href="about.html">Наши проекты</a>
+						</span>
+					</div>
+					<div class="with-submenu">
+						<a href="catalog.html">Услуги и цены</a>
+						<span class="catalog-submenu">
+							<a href="catalog.html">Индивидуальная психотерапия</a>
+							<a href="catalog.html">Семейная психотерапия</a>
+							<a href="catalog.html">Детская психотерапия</a>
+							<a href="catalog.html">Психологическое консультирование</a>
+							<a href="catalog.html">Консультация психиатра</a>
+							<a href="catalog.html">Консультация терапевта</a>
+							<a href="catalog.html">Консультация врача-диетолога</a>
+							<a href="catalog.html">Групповой тренинг социальной компетентности</a>
+							<a href="catalog.html">Групповой тренинг ассертивности (уверенности в себе)</a>
+						</span>
+					</div>
+					<div class="with-submenu">
+						<a href="special.html">Для специалистов</a>
+						<span>
+							<a href="special.html">Статьи</a>
+							<a href="special.html">Материалы для</a>
+						</span>
+					</div>
+					<div class="with-submenu">
+						<a href="patient.html">Для пациентов</a>
+						<span>
+							<a href="patient.html">Статьи</a>
+							<a href="patient.html">Материалы для скачивания</a>
+							<a href="patient.html">Видеоблог</a>
+						</span>
+					</div>
+					<div>
+						<a href="opinions.html">Отзывы</a>
+					</div>
+					<div>
+						<a href="faq.html">Вопрос-ответ</a>
+					</div>
+					<div>
+						<a href="contacts.html">Контакты</a>
+					</div>
+				</nav>
+				<form class="search-form" method="GET" action="?">
+					<input type="text" placeholder="Поиск">
+				</form>
+			</div>
+		</div>
+	</div>
+	<div class="block header-bottom">
+		<div class="block-inner">
+			<div class="nav-bottom">
+				<div class="nav-bottom-left">
+					<a href="#">Лицензия на медицинскую деятельность</a>
+				</div>	
+				<div class="nav-bottom-right">
+					ИНДИВИДУАЛЬНАЯ КОНСУЛЬТАЦИЯ ПСИХОТЕРАПЕВТА
+				</div>
+			</div>	
 		</div>
 	</div>
 
-	
+
+	<!-- Banner -->
+	<div class="block banner">
+		<div class="block-inner">
+			<div class="info">
+				<div class="info-content">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.
+				</div>
+			</div>
+			<div class="line">
+				<div class="top-circle circle"></div>
+				<div class="bottom-circle circle"></div>
+			</div>
+			<div class="circles">
+				<div class="circle active"></div>
+				<div class="circle"></div>
+				<div class="circle"></div>
+			</div>
+			<form class="form" method="GET" action="?">
+				<h2>
+					Круглосуточная запись на прием
+				</h2>
+				<div class="inputs">
+					<div class="inputs-inner">
+						<div class="select">
+							<input type="hidden" name="spec">
+							<div class="select-value">
+								Выберите специалиста
+							</div>
+							<div class="select-options">
+								<div class="select-option">
+									Зорро
+								</div>
+								<div class="select-option">
+									Бэтмен
+								</div>
+								<div class="select-option">
+									Спанч Боб
+								</div>
+								<div class="select-option">
+									Сквэр Пэнтс
+								</div>							
+							</div>
+						</div>
+						<input type="text" name="name" placeholder="Ваше имя*">
+						<input type="text" name="phone" placeholder="Ваш телефон*">
+						<textarea name="text" placeholder="Ваше сообщение"></textarea>
+					</div>
+				</div>
+				<input type="submit" value="Записаться">
+				<a href="#" class="policy">
+					Политика конфиденциальности
+				</a>
+			</form>
+		</div>
+	</div>
+
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
