--- a/www/_____/index.html
+++ b/www/_____/index.html
@@ -24,7 +24,7 @@
 				<div class="phone">
 					8 800 777 44 66
 				</div>
-				<div class="button order-button">
+				<div class="button show-form-dialog">
 					ЗАПИСЬ НА ПРИЕМ 24/7
 				</div>
 			</div>
@@ -103,6 +103,7 @@
 				<div class="nav-bottom-right">
 					ИНДИВИДУАЛЬНАЯ КОНСУЛЬТАЦИЯ ПСИХОТЕРАПЕВТА
 				</div>
+				<div class="top-circle circle"></div>
 			</div>	
 		</div>
 	</div>
@@ -112,20 +113,19 @@
 	<div class="block banner">
 		<div class="block-inner">
 			<div class="info">
+				<div class="line">
+					<div class="bottom-circle circle"></div>
+				</div>
 				<div class="info-content">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.
 				</div>
-			</div>
-			<div class="line">
-				<div class="top-circle circle"></div>
-				<div class="bottom-circle circle"></div>
 			</div>
 			<div class="circles">
 				<div class="circle active"></div>
 				<div class="circle"></div>
 				<div class="circle"></div>
 			</div>
-			<form class="form" method="GET" action="?">
+			<form class="order-form form" method="GET" action="?">
 				<h2>
 					Круглосуточная запись на прием
 				</h2>
@@ -164,11 +164,291 @@
 		</div>
 	</div>
 
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<!-- Gallery -->
+	<div class="block gallery">
+		<div class="block-inner">
+			<div class="columns">
+				<div class="column">
+					<div class="column-head">
+						Истории выздоровления
+					</div>
+					<div class="column-content">
+						<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien 
+						<a href="#">подробнее</a>
+						</p>
+					</div>
+				</div>
+				<div class="column">
+					<div class="column-head">
+						Информация для пациентов
+					</div>
+					<div class="column-content">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum 
+							<a href="#">подробнее</a>
+						</p>
+					</div>
+				</div>
+				<div class="column">
+					<div class="column-head">
+						Наши проекты
+					</div>
+					<div class="column-content">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo 
+							<a href="#">подробнее</a>
+						</p>
+						<p>
+							Natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien 
+							<a href="#">подробнее</a>
+						</p>
+					</div>
+				</div>
+				<div class="column">
+					<div class="column-head green">
+						Наши специалисты
+					</div>
+					<div class="slider">
+						<div class="slider-outer">
+							<div class="slider-inner">
+								<div class="slide">
+									<div class="image" style="background-image: url(images/specs/photo1.jpg);"></div>
+									<div class="text">
+										<b>Иванова Мария Ивановна</b>
+										Психиатр-нарколог, кандидат медицинских наук
+									</div>
+								</div>
+								<div class="slide">
+									<div class="image" style="background-image: url(images/specs/photo1.jpg);"></div>
+									<div class="text">
+										<b>Иванова Мария Ивановна</b>
+										Психиатр-нарколог, кандидат медицинских наук
+									</div>
+								</div>
+								<div class="slide">
+									<div class="image" style="background-image: url(images/specs/photo1.jpg);"></div>
+									<div class="text">
+										<b>Иванова Мария Ивановна</b>
+										Психиатр-нарколог, кандидат медицинских наук
+									</div>
+								</div>
+								<div class="slide">
+									<div class="image" style="background-image: url(images/specs/photo1.jpg);"></div>
+									<div class="text">
+										<b>Иванова Мария Ивановна</b>
+										Психиатр-нарколог, кандидат медицинских наук
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="slider-prev"></div>
+						<div class="slider-next"></div>
+					</div>
+				</div>
+			</div>
+			<div class="info-about">
+				<div class="image"></div>
+				<div class="text">
+					<p>
+						<b>Наш Центр</b> – первый в Перми и один из немногих в стране специализируется на современной клинической психотерапии, то есть на терапии невротических тревожных расстройств (панического расстройства, ОКР, социофобии и т.д.), депрессии, нарушений пищевого поведения, зависимостей, психосоматических заболеваний.
+					</p>
+					<p>
+						Мы не просто занимаемся поиском психологических причин страдания (расстройства), но и разрабатываем совместно с пациентом конкретные способы справиться с симптомами. Это важно, потому что, как правило, само понимание, откуда взялось расстройство, ещё не ведет к выздоровлению. Многие пациенты так и говорят: «я знаю, откуда это у меня, но что мне делать, чтобы справиться с этим?».
+					</p>
+					<p>
+						Чтобы достичь этой цели, мы используем лучшие разработки отечественной и зарубежной науки, а также ведем научные исследования сами.
+					</p>
+					<p>
+						Кроме клинической психотерапевтической работы, мы оказываем и психологическую помощь – в ситуациях утраты, ощущении отсутствия смысла, семейных проблемах и т.д. 
+					</p>
+					<p>
+						В своей работе мы используем только методы, имеющие доказанную эффективность – научно обоснованные. Поэтому чаще всего мы применяем когнитивно-поведенческую терапию, которая из всех методов психотерапии имеет наивысший статус научной доказательности и во всем мире является «методом выбора» для терапии различных расстройств.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>		
+
+	<!-- What Is -->
+	<div class="block whatis">
+		<div class="block-inner">
+			<h2>
+				Что такое когнитивная терапия?
+			</h2>
+			<div class="items">
+				<div class="item active">
+					<div class="icon">
+						<div class="icon-bg"></div>
+					</div>
+					<h3>
+						Научный подход к лечению
+					</h3>
+					<p>
+						<b>Применение научно обоснованных методов терапии.</b> Методы, которые мы используем для помощи пациентам, подвергались изучению средствами современной науки и имеют доказанную эффективность. Поэтому мы применяем чаще всего когнитивно-поведенческую терапию, которая имеет наивысший статус научной доказательности и во всем мире является «методом выбора» для терапии различных расстройств.
+					</p>
+					<p>
+						<b>Психообразование.</b> Мы придерживаемся мнения, что важнейшей частью терапии является подробное информирование пациента о том, что с ним происходит (очень часто одно это дает серьезное облегчение), а также каков механизм действия тех или иных психотерапевтических методик, которые мы предлагаем.
+					</p>
+				</div>
+				<div class="item">
+					<div class="icon">
+						<div class="icon-bg"></div>
+					</div>
+					<h3 class="green">
+						Индивидуальный и комплексный подход
+					</h3>
+					<p>
+						*<b>Индивидуальный подход</b> к пациенту очень часто декларируется, но на деле специалист склонен применять тот метод, которым он владеет и в который верит, а не тот, который действительно показан. Мы изучаем практику применения различных психотерапевтических подходов и предлагаем действительно лучшие. Кроме того, индивидуальный подход учитывает пожелания пациента, а также другие факторы (финансовые, временные ограничения, проживание в другом городе и т.д.)
+					</p>
+					<p>
+						<b>Комплексность и бригадный подход к работе.</b> Во многих случаях терапия не ограничивается только общением психотерапевта с пациентом – иногда необходимо одновременно консультировать супруга, родителей или детей, проводить работу со всей семьей, а иногда для наилучшего эффекта индивидуальная терапия сочетается с групповой. Разные специалисты, которые ведут эту работу, координируют усилия между собой, что дает «эффект синергии» и позволяет добиться лучших результатов.
+					</p>
+				</div>
+				<div class="item">
+					<div class="icon">
+						<div class="icon-bg"></div>
+					</div>
+					<h3>
+						Профессионализм и гарантии
+					</h3>
+					<p>
+						<b>Работа с целостной личностью.</b> Нередко избавление от симптома невозможно без психологической проработки практических проблем, стоящих перед пациентом: семейных, личных, экзистенциальных и т.д. В этом случае психотерапевтическая помощь сочетается с психологической.
+					</p>
+					<p>
+						<b>Комбинация психотерапии и других видов лечения.</b> При необходимости психотерапевтическая помощь дополняется назначением лекарств, а также консультированием терапевта, невролога, гастроэнтеролога и т д.
+					</p>
+					<p>
+						<b>Профессионализм.</b> Наши специалисты не только имеют профессиональное образование и опыт работы, но и регулярно повышают свою квалификацию, а также проходят супервизию своей работы.
+					</p>
+					<p>
+						<b>Этические стандарты.</b> Мы гарантируем помощь с соблюдением всех этических стандартов, соответствующих профессиональным кодексам.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Map -->
+	<div class="block map-area">
+		<div class="block-inner">
+			<h2>
+				Как нас найти
+			</h2>
+		</div>
+		<div class="map-marker"></div>
+		<div class="map" id="map"></div>
+	</div>
+
+	<!-- Footer -->
+	<footer class="block footer">
+		<div class="block-inner">
+			<div class="column">
+				<div class="caption">
+					ЦЕНТР КОГНИТИВНОЙ ТЕРАПИИ
+				</div>
+				<a href="#">Обучение в центре</a>
+				<a href="#">Наши партнеры</a>
+				<a href="#">Документы и лицензии</a>
+				<span class="separator"></span>
+				
+				<a href="#">Специалисты центра</a>
+				<a href="#">Цены</a>
+				<a href="#">Вопрос-ответ</a>
+				<a href="#">Контакты</a>
+				<span class="separator"></span>
+				
+				<a href="#">Карта сайта</a>
+			</div>
+			<div class="column">
+				<div class="caption">
+					УСЛУГИ ЦЕНТРА
+				</div>
+				<a href="#" class="decorated">Индивидуальная психотерапия</a>
+				<a href="#" class="decorated">Семейная психотерапия</a>
+				<a href="#" class="decorated">Детская психотерапия</a>
+				<a href="#" class="decorated">Психологическое консультирование</a>
+				<a href="#" class="decorated">Консультация психиатра</a>
+				<a href="#" class="decorated">Консультация терапевта</a>
+				<a href="#" class="decorated">Консультация невролога</a>
+				<a href="#" class="decorated">Консультация врача-диетолога</a>
+				<a href="#" class="decorated">Групповой тренинг социальной компетентности</a>
+				<a href="#" class="decorated">Групповой тренинг ассертивности (уверенности в себе)</a>
+			</div>
+			<div class="column">
+				<div class="caption">
+					ПОЛЕЗНАЯ ИНФОРМАЦИЯ
+				</div>
+				<a href="#">Информация</a>
+				<a href="#">Для пациентов</a>
+				<a href="#">Для специалистов</a>
+				<a href="#">Видеоблог</a>
+				<a href="#">Материалы для скачивания</a>
+				<div class="developed">
+					Разработано в 
+					<a href="#"></a>
+				</div>
+			</div>
+			<div class="column">
+				<div class="phone">
+					8 800 777 44 66
+				</div>
+				<div class="button-container">
+					<div class="button write-us">
+						Напишите нам
+					</div>
+				</div>
+				<div class="contacts">
+					<div><span class="fa fa-map-marker"></span> 614000 г. Пермь, <br>ул. Комсомольский проспект, 24, каб. 15</div>
+					<div><span class="fa fa-phone"></span> +7 234 949-58-83,  +7 239 585-58-61</div>
+					<div><span class="fa fa-envelope"></span> info@cbt-perm.ru</div>
+				</div>
+				<div class="social-links">
+					<a class="fa fa-facebook social" href="#"></a>
+					<a class="fa fa-vk social" href="#"></a>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	<div class="dialog-mask order-dialog-mask"></div>
+	<div class="dialog order-dialog">
+		<form class="form order-form" method="GET" action="?">
+			<h2>
+				Круглосуточная запись на прием
+			</h2>
+			<div class="inputs">
+				<div class="inputs-inner">
+					<div class="select">
+						<input type="hidden" name="spec">
+						<div class="select-value">
+							Выберите специалиста
+						</div>
+						<div class="select-options">
+							<div class="select-option">
+								Зорро
+							</div>
+							<div class="select-option">
+								Бэтмен
+							</div>
+							<div class="select-option">
+								Спанч Боб
+							</div>
+							<div class="select-option">
+								Сквэр Пэнтс
+							</div>							
+						</div>
+					</div>
+					<input type="text" name="name" placeholder="Ваше имя*">
+					<input type="text" name="phone" placeholder="Ваш телефон*">
+					<textarea name="text" placeholder="Ваше сообщение"></textarea>
+				</div>
+			</div>
+			<input type="submit" value="Записаться">
+			<a href="#" class="policy">
+				Политика конфиденциальности
+			</a>
+		</form>
+	</div>
 </body>
 </html>
