--- a/www/_____/doc.html
+++ b/www/_____/doc.html
@@ -95,7 +95,7 @@
 		</div>
 	</div>
 
-	<div class="block doctor-area">
+	<div class="block document-area">
 		<div class="block-inner">
 			<table class="main-table" cellpadding="0" cellspacing="0">
 				<tr>
@@ -110,10 +110,10 @@
 							<div class="nav-link">
 								<a href="#">Наши партнеры</a>
 							</div>
-							<div class="nav-link">
+							<div class="nav-link active">
 								<a href="#">Документы и лицензии</a>
 							</div>
-							<div class="nav-link active">
+							<div class="nav-link">
 								<a href="#">Наши специалисты</a>
 							</div>
 							<div class="nav-link">
@@ -135,67 +135,34 @@
 					</td>
 					<td>
 						<h1>
-							Иванов Иван Иванович
+							Документы и лицензии
 						</h1>
 						<div class="breadcrumbs">
 							<a href="#">Главная</a> / 
 							<a href="#">О центре</a> / 
-							<a href="#">Наши специалисты</a> / 
-							<span>Иванов Иван Иванович</span>
+							<span>Документы и лицензии</span>
 						</div>
-						<div class="top-info">
-							<div class="photo"></div>
-							<div class="title">
-								<div>Психиатр-нарколог, психотерапевт</div>
-								<div>кандидат медицинских наук,</div>
-								<div>профессор</div>
-							</div>
-							<p>
-								<b>Степень:</b> Кандидат медицинских наук
-							</p>
-							<p>
-								<b>Стаж:</b> 15 лет
-							</p>
-							<p>
-								<b>Категория:</b> Первая
-							</p>
-							<p>
-								<b>Режим работы:</b><br>
-								Понедельник: 10:00 - 16:00<br>
-								Вторник: 09:00 - 16:00<br>
-								Среда: -<br>
-								Четверг: -<br>
-								Пятница: 10:00 - 18:00<br>
-								Суббота: - <br>
-								Воскресенье: -
-							</p>
-							<div class="button order-doctor">
-								Записаться на прием
-							</div>
-						</div>
-						<div class="bottom-info standart-content">
+						<div class="documents-content standart-content">
 							<h3>
 								Классический текст Lorem Ipsum, используемый с XVI века
 							</h3>
 							<p>
-								"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."							
-							</p>
-							<h3>
-								Абзац 1.10.32 "de Finibus Bonorum et Malorum", написанный Цицероном в 45 году н.э.							
-							</h3>
-							<p>
-								Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+								"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 							</p>
 						</div>
-						<div class="social-links">
-							Поделиться:
-							<a class="fa fa-facebook social" href="#"></a>
-							<a class="fa fa-vk social" href="#"></a>
-						</div>
-						<div class="pictutres">
-							<div class="pictutre"></div>
-							<div class="pictutre"></div>
-							<div class="pictutre"></div>
+						<div class="items">
+							<div class="item">
+							</div>
+							<div class="item">
+							</div>
+							<div class="item">
+							</div>
+							<div class="item">
+							</div>
+							<div class="item">
+							</div>
+							<div class="item">
+							</div>
 						</div>
 					</td>
 				</tr>
