--- a/www/_____/specialists.html
+++ b/www/_____/specialists.html
@@ -67,7 +67,7 @@
 						<a href="special.html">Для специалистов</a>
 						<span>
 							<a href="special.html">Статьи</a>
-							<a href="special.html">Материалы для</a>
+							<a href="special.html">Материалы для скачивания</a>
 						</span>
 					</div>
 					<div class="with-submenu">
